--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.6",
+    "pg": "^8.7.3",
+    "typeorm": "^0.2.45",
     "uuidv4": "^6.2.12"
   }
 }
