Finish Movie Crud

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,17 @@
 {
-    "compilerOptions": {
-      "target": "es2017",
-      "module": "commonjs",
-      "esModuleInterop": false,
-      "forceConsistentCasingInFileNames": true,            
-      "strict": true,
-      "allowJs": true,
-      "skipLibCheck": true                                 
-    },
+  "compilerOptions": {
+    "target": "es2017",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,            
+    "strict": true,
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strictPropertyInitialization": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictNullChecks": false                        
+  },
     "include": [
       "src/**/*.ts"
     ]
