--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "dev": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
@@ -20,6 +21,6 @@
     "mongoose": "^6.2.6",
     "pg": "^8.7.3",
     "typeorm": "^0.2.45",
-    "uuidv4": "^6.2.12"
+    "uuid": "^8.3.2"
   }
 }
